k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-deployment
  labels:
    app: mail
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail
      version: v1
  template:
    metadata:
      labels:
        app: mail
        version: v1
    spec:
      serviceAccountName: mail-service-account
      containers:
      - name: mail
        image: docker.io/duynguyen03/mail:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4567
