k8s/destinationRule.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: mail-service
spec:
  host: mail-service
  subsets:
  - name: v1
    labels:
      version: v1
